crates/figue/tests/integration/snapshots/main__integration__subcommand__missing_nested_subcommand_error.snap
---
source: crates/figue/tests/integration/subcommand.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: missing required argument
   ╭─[ <suggestion>:1:4 ]
   │
 1 │ ci <action>
   │    ────┬───  
   │        ╰───── missing required argument
───╯
